libgc: Fix match against a character itself

https://bugzilla.gnome.org/show_bug.cgi?id=747061